--- a/m3-w7d4-mvc_view_part2_exercises_pair/src/main/webapp/css/site.css
+++ b/m3-w7d4-mvc_view_part2_exercises_pair/src/main/webapp/css/site.css
@@ -115,4 +115,18 @@ tr.gray > th {
 	display: flex;
 	align-self: flex-end;
 }	
+#star {
+	height: 20px;
+}
+.hipsterAndOldMan {
+	color: #8ab436;
+	text-align: center;
+}
+.masterContainer {
+	display: flex;
+}
+#description {
+	text-align: bottom;
+}
+
 }
