--- a/m3-w7d4-mvc_view_part2_exercises_pair/src/main/webapp/WEB-INF/jsp/common/header.jspf
+++ b/m3-w7d4-mvc_view_part2_exercises_pair/src/main/webapp/WEB-INF/jsp/common/header.jspf
@@ -6,7 +6,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>Recipe List View</title>
+    <title><c:out value="${pageTitle}"/></title>
     <link rel="stylesheet" href="css/site.css" />
 </head>
 <body>
